--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wp-salts-cli",
   "version": "0.0.0",
-  "description": "CLI tool to generate WordPress salts",
+  "description": "CLI tool to generate WordPress salts in various formats",
   "scripts": {
     "lint": "npm run test",
     "precommit": "npm run lint",
@@ -10,7 +10,11 @@
   "bin": {
     "wp-salts": "./bin/wp-salts.js"
   },
-  "keywords": [],
+  "keywords": [
+    "wordpress",
+    "salts",
+    "wordpress-salts"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
