--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "CLI tool to generate WordPress salts in various formats",
   "scripts": {
     "lint": "npm run test",
-    "precommit": "npm run lint",
     "test": "eslint ./bin"
   },
   "bin": {
     "wp-salts": "./bin/wp-salts.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/idleberg/node-wp-salts-cli.git"
   },
   "keywords": [
     "wordpress",
@@ -28,5 +31,10 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.1",
     "husky": "^1.3.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
   }
 }
