--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc --pretty --project ./",
     "dev": "tsc --watch --pretty --project ./",
     "lint": "tslint --project .",
-    "test": "npm run lint"
+    "test": "npx ava --verbose"
   },
   "bin": {
     "wp-salts": "./bin/wp-salts.js"
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^12.6.2",
+    "ava": "^2.2.0",
     "husky": "^3.0.0",
     "tslint": "^5.18.0",
     "typedoc": "^0.14.2",
@@ -38,7 +39,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run test"
+      "pre-commit": "npm run lint && npm run test"
     }
   }
 }
