--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^12.6.2",
     "ava": "^2.2.0",
+    "execa": "^2.0.3",
     "husky": "^3.0.0",
     "tslint": "^5.18.0",
     "typedoc": "^0.14.2",
