--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsc --watch --pretty --project ./",
     "lint": "tslint --project .",
     "prepublishOnly": "npm run build",
-    "test": "npx ava --verbose"
+    "test": "ava --verbose"
   },
   "bin": {
     "wp-salts": "./bin/wp-salts.js"
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^12.12.17",
     "ava": "^2.4.0",
+    "concurrently": "^5.0.1",
     "execa": "^3.0.4",
     "husky": "^3.1.0",
     "tslint": "^5.20.1",
@@ -40,7 +41,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test"
+      "pre-commit": "concurrently \"npm run lint\" \"npm run test\""
     }
   }
 }
