--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "devDependencies": {
     "@types/node": "^12.12.17",
     "ava": "^2.4.0",
-    "concurrently": "^5.0.1",
     "execa": "^3.0.4",
     "husky": "^3.1.0",
     "tslint": "^5.20.1",
@@ -41,7 +40,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "concurrently \"npm run lint\" \"npm run test\""
+      "pre-commit": "npm run lint && npm run test"
     }
   }
 }
