--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.1.0",
   "description": "CLI tool to generate WordPress salts in various formats",
   "scripts": {
-    "build": "tsc --pretty --project ./",
+    "build": "rollup --config",
     "dev": "npm run start",
-    "lint": "tslint --project .",
-    "prepublishOnly": "npm run build",
-    "start": "tsc --watch --pretty --project ./",
-    "test": "ava --verbose"
+    "fix": "eslint --fix ./src",
+    "lint": "eslint ./src",
+    "start": "rollup --watch --config",
+    "test": "ava ./test/*.js --verbose"
   },
   "bin": {
-    "wp-salts": "./bin/wp-salts.js"
+    "wp-salts": "./bin/cli.js"
   },
   "repository": {
     "type": "git",
@@ -25,23 +25,37 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^3.0.0",
-    "commander": "^4.0.1",
+    "chalk": "^4.1.0",
+    "commander": "^6.0.0",
     "sort-keys": "^4.0.0",
     "table": "^5.4.6",
+    "update-notifier": "^4.1.0",
     "wp-salts": "^1.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.12.17",
-    "ava": "^2.4.0",
-    "execa": "^3.0.4",
-    "husky": "^3.1.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.3"
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@rollup/plugin-typescript": "^5.0.2",
+    "@types/node": "^12.12.53",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "ava": "^3.11.0",
+    "eslint": "^7.5.0",
+    "esm": "^3.2.25",
+    "execa": "^4.0.3",
+    "husky": "^4.2.5",
+    "rollup": "^2.23.0",
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint && npm run test"
     }
+  },
+  "ava": {
+    "require": [
+      "esm"
+    ]
   }
 }
