--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
+    "log-symbols": "^4.0.0",
     "sort-keys": "^4.0.0",
     "table": "^6.0.1",
     "update-notifier": "^4.1.1",
