--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wp-salts-cli",
   "version": "1.3.0",
-  "description": "CLI tool to generate WordPress salts in various formats",
+  "description": "Generate WordPress salts right in your shell, even when offline. Supports plain-text output as well as DotEnv, PHP, JSON, or YAML.",
   "scripts": {
     "build": "rollup --config",
     "dev": "npm run start",
