--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sort-keys": "^4.0.0",
     "table": "^6.0.1",
     "update-notifier": "^4.1.1",
-    "wp-salts": "^1.1.0"
+    "wp-salts": "^1.1.0",
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.0.0",
@@ -47,6 +48,7 @@
     "execa": "^4.0.3",
     "husky": "^4.2.5",
     "rollup": "^2.26.8",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "typescript": "^4.0.2"
   },
   "husky": {
