--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "bin": {
     "wp-salts": "./index.js"
   },
+  "typings": "./types",
   "repository": {
     "type": "git",
     "url": "https://github.com/idleberg/node-wp-salts-cli.git"
@@ -48,7 +49,7 @@
     "execa": "^4.0.3",
     "husky": "^4.2.5",
     "rollup": "^2.26.9",
-    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-filesize": "^9.0.2",
     "typescript": "^4.0.2"
   },
   "husky": {
