--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "rollup --config",
     "dev": "npm run start",
     "fix": "eslint --fix ./src",
-    "lint": "eslint ./src",
+    "lint:json": "jsonlint --quiet ./*.json",
+    "lint:md": "remark . --quiet --frail --ignore-path .gitignore",
+    "lint:ts": "eslint ./src --ignore-path .gitignore",
+    "lint": "npm-run-all --parallel lint:*",
     "start": "rollup --watch --config",
     "test": "ava ./test/*.js --verbose"
   },
@@ -27,38 +30,52 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^4.1.0",
-    "commander": "^6.1.0",
+    "commander": "^6.2.1",
     "log-symbols": "^4.0.0",
-    "sort-keys": "^4.0.0",
-    "table": "^6.0.2",
-    "update-notifier": "^4.1.1",
+    "sort-keys": "^4.2.0",
+    "table": "^6.0.7",
+    "update-notifier": "^5.0.1",
     "wp-salts": "^1.1.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^15.0.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-typescript": "^5.0.2",
-    "@types/node": "^14.6.4",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "ava": "^3.12.1",
-    "eslint": "^7.8.1",
+    "@rollup/plugin-node-resolve": "11.0.1",
+    "@rollup/plugin-typescript": "^8.1.2",
+    "@types/node": "^14.14.20",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
+    "ava": "^3.15.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-json": "^2.1.2",
     "esm": "^3.2.25",
-    "execa": "^4.0.3",
-    "husky": "^4.2.5",
-    "rollup": "^2.26.9",
-    "typescript": "^4.0.2"
+    "execa": "^5.0.0",
+    "husky": "^4.3.7",
+    "jsonlint": "^1.6.3",
+    "lint-staged": "^10.5.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "remark-cli": "^9.0.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-preset-prettier": "^0.4.0",
+    "rollup": "^2.36.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test"
+      "pre-commit": "lint-staged"
     }
   },
   "ava": {
     "require": [
       "esm"
     ]
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.json": "jsonlint --quiet",
+    "*.md": "prettier --write"
   }
 }
