--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:ts": "eslint ./src --ignore-path .gitignore",
     "lint": "npm-run-all --parallel lint:*",
     "start": "rollup --watch --config",
+    "publish": "np --no-yarn",
     "test": "ava ./test/*.js --verbose"
   },
   "bin": {
@@ -54,6 +55,7 @@
     "husky": "^4.3.7",
     "jsonlint": "^1.6.3",
     "lint-staged": "^10.5.3",
+    "np": "^7.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "remark-cli": "^9.0.0",
