--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "build": "rollup --config",
     "dev": "npm run start",
     "fix": "eslint --fix ./src",
-    "lint:json": "jsonlint --quiet ./*.json",
+    "lint:json": "eslint ./*.json --ignore-path .gitignore",
     "lint:md": "remark . --quiet --frail --ignore-path .gitignore",
     "lint:ts": "eslint ./src --ignore-path .gitignore",
     "lint": "npm-run-all --parallel lint:*",
     "start": "rollup --watch --config",
     "publish": "np --no-yarn",
-    "test": "ava ./test/*.js --verbose"
+    "test": "ava ./test/*.js --verbose",
+    "prepare": "husky install"
   },
   "bin": {
     "wp-salts": "./index.js"
@@ -30,37 +31,35 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.0",
-    "commander": "^7.0.0",
-    "log-symbols": "^4.0.0",
-    "sort-keys": "^4.2.0",
+    "chalk": "^5.0.0",
+    "commander": "^8.3.0",
+    "log-symbols": "^5.1.0",
+    "sort-keys": "^5.0.0",
     "table": "^6.0.7",
     "update-notifier": "^5.0.1",
-    "wp-salts": "^1.2.0",
+    "wp-salts": "^2.0.0",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "11.1.0",
+    "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "^8.1.0",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "ava": "^3.15.0",
-    "eslint": "^7.18.0",
-    "eslint-plugin-json": "^2.1.2",
-    "esm": "^3.2.25",
-    "execa": "^5.0.0",
-    "husky": "^4.3.8",
-    "jsonlint": "^1.6.3",
-    "lint-staged": "^10.5.3",
+    "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "ava": "^4.0.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-json": "^3.1.0",
+    "execa": "^6.0.0",
+    "husky": "^7.0.0",
+    "lint-staged": "^12.3.2",
     "np": "^7.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "remark-cli": "^9.0.0",
-    "remark-preset-lint-recommended": "^5.0.0",
-    "remark-preset-prettier": "^0.4.0",
+    "remark-cli": "^10.0.1",
+    "remark-preset-lint-recommended": "^6.1.2",
+    "remark-preset-prettier": "^1.0.0",
     "rollup": "^2.38.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
@@ -70,14 +69,8 @@
       "esm"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.ts": "eslint --cache --fix",
-    "*.json": "jsonlint --quiet",
+    "*.(json|ts)": "eslint --cache --fix",
     "*.md": "prettier --write"
   }
 }
