--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "lint": "npm-run-all --parallel lint:*",
     "start": "rollup --watch --config",
     "publish": "np --no-yarn",
-    "test": "ava ./test/*.js --verbose",
+    "test": "ava ./test/*.mjs --verbose",
     "prepare": "husky install"
   },
   "bin": {
-    "wp-salts": "./index.js"
+    "wp-salts": "./bin/cli.mjs"
   },
+  "type": "module",
   "typings": "./types",
+  "engines": {
+    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/idleberg/node-wp-salts-cli.git"
@@ -31,12 +35,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.0.0",
+    "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "log-symbols": "^5.1.0",
     "sort-keys": "^5.0.0",
     "table": "^6.0.7",
-    "update-notifier": "^5.0.1",
     "wp-salts": "^2.0.0",
     "yaml": "^1.10.0"
   },
@@ -63,11 +66,6 @@
     "rollup": "^2.38.0",
     "tslib": "^2.1.0",
     "typescript": "^4.1.3"
-  },
-  "ava": {
-    "require": [
-      "esm"
-    ]
   },
   "lint-staged": {
     "*.(json|ts)": "eslint --cache --fix",
