--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "lint-staged": "^12.3.2",
     "np": "^7.2.0",
     "npm-run-all": "^4.1.5",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "remark-cli": "^10.0.1",
     "remark-preset-lint-recommended": "^6.1.2",
