--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start": "rollup --watch --config",
     "publish": "np --no-yarn",
     "test": "ava ./test/*.mjs --verbose",
-    "prepare": "husky install"
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "files": [
     "bin/",
