--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "type": "module",
   "typings": "types/",
   "engines": {
-    "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
+    "node": "^14.13.1 || >=16.0.0"
   },
   "repository": {
     "type": "git",
