add missing dependency

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "log-symbols": "^5.1.0",
     "sort-keys": "^5.0.0",
     "table": "^6.0.7",
+    "update-notifier": "^5.1.0",
     "wp-salts": "^2.0.1",
-    "wp-salts-cli": "^2.0.0",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
