--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:ts": "eslint ./src --ignore-path .gitignore",
     "lint": "npm-run-all --parallel lint:*",
     "start": "rollup --watch --config",
+    "prepack": "npm run build",
     "publish": "np --no-yarn",
     "test": "ava ./test/*.mjs --verbose"
   },
@@ -24,7 +25,7 @@
     "wp-salts": "./index.mjs"
   },
   "type": "module",
-  "typings": "types/",
+  "types": "./types/index.d.ts",
   "engines": {
     "node": "^14.13.1 || >=16.0.0"
   },
