--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "@types/node": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "ava": "^4.0.1",
     "eslint": "^8.7.0",
     "eslint-plugin-json": "^3.1.0",
     "execa": "^6.0.0",
@@ -71,7 +70,8 @@
     "remark-preset-prettier": "^1.0.0",
     "rollup": "^2.38.0",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "uvu": "^0.5.6"
   },
   "lint-staged": {
     "*.(json|ts)": "eslint --cache --fix",
