--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "rollup --watch --config",
     "prepack": "npm run build",
     "publish": "np --no-yarn",
-    "test": "ava ./test/*.mjs --verbose"
+    "test": "uvu tests"
   },
   "files": [
     "bin/",
@@ -44,33 +44,33 @@
     "commander": "^8.3.0",
     "log-symbols": "^5.1.0",
     "sort-keys": "^5.0.0",
-    "table": "^6.0.7",
+    "table": "^6.8.0",
     "update-notifier": "^5.1.0",
-    "wp-salts": "^2.0.1",
-    "yaml": "^1.10.0"
+    "wp-salts": "^2.0.2",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-typescript": "^8.1.0",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^8.7.0",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^4.0.1",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@types/node": "^18.11.5",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
     "eslint-plugin-json": "^3.1.0",
-    "execa": "^6.0.0",
-    "husky": "^7.0.0",
-    "lint-staged": "^12.3.2",
-    "np": "^7.2.0",
+    "execa": "^6.1.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "np": "^7.6.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "remark-cli": "^10.0.1",
+    "prettier": "^2.7.1",
+    "remark-cli": "^11.0.0",
     "remark-preset-lint-recommended": "^6.1.2",
-    "remark-preset-prettier": "^1.0.0",
-    "rollup": "^2.38.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
+    "remark-preset-prettier": "^2.0.1",
+    "rollup": "^3.2.3",
+    "tslib": "^2.4.0",
+    "typescript": "^4.8.4",
     "uvu": "^0.5.6"
   },
   "lint-staged": {
