test against node 14

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: ['lts/*', '*']
+        node-version: ['14', 'lts/*', '*']
         os: [ubuntu-latest]
 
     steps:
