--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "wordpress-salts"
   ],
   "dependencies": {
-    "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "log-symbols": "^5.1.0",
+    "picocolors": "^1.0.0",
     "sort-keys": "^5.0.0",
     "table": "^6.8.0",
     "update-notifier": "^5.1.0",
