--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -19,3 +19,4 @@ jobs:
           days-before-pr-stale: 90
           days-before-issue-close: 30
           days-before-pr-close: 30
+          exempt-issue-labels: bug,enhancement
