--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Generate WordPress salts right in your shell, even when offline. Supports plain-text output as well as DotEnv, PHP, JSON, or YAML.",
   "license": "MIT",
   "scripts": {
-    "build": "rollup --config",
-    "dev": "npm run start",
+    "build": "tsup",
+    "dev": "npm run build -- --watch",
     "fix": "eslint --fix ./src",
     "lint:json": "eslint ./*.json --ignore-path .gitignore",
     "lint:md": "remark . --quiet --frail --ignore-path .gitignore",
     "lint:ts": "eslint ./src --ignore-path .gitignore",
     "lint": "npm-run-all --parallel lint:*",
-    "start": "rollup --watch --config",
+    "start": "npm run dev",
     "prepack": "npm run build",
     "publish": "np --no-yarn",
     "test": "uvu tests"
@@ -28,7 +28,7 @@
   "type": "module",
   "types": "./types/index.d.ts",
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=18"
   },
   "repository": {
     "type": "git",
@@ -43,37 +43,33 @@
     "wp-cli"
   ],
   "dependencies": {
-    "commander": "^9.4.1",
-    "log-symbols": "^5.1.0",
+    "commander": "^11.1.0",
+    "log-symbols": "^6.0.0",
     "picocolors": "^1.0.0",
     "sort-keys": "^5.0.0",
-    "table": "^6.8.0",
-    "update-notifier": "^6.0.2",
-    "wp-salts": "^2.0.2",
-    "yaml": "^2.1.3"
+    "table": "^6.8.1",
+    "update-notifier": "^7.0.0",
+    "wp-salts": "^4.0.0",
+    "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@rollup/plugin-json": "^5.0.1",
-    "@rollup/plugin-node-resolve": "15.0.1",
-    "@rollup/plugin-typescript": "^9.0.2",
     "@types/node": "^18.11.5",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint": "^8.26.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-json": "^3.1.0",
-    "execa": "^6.1.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "np": "^7.6.2",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "remark-cli": "^11.0.0",
-    "remark-preset-lint-recommended": "^6.1.2",
+    "execa": "^8.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "np": "^9.2.0",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.1.1",
+    "remark-cli": "^12.0.0",
+    "remark-preset-lint-recommended": "^6.1.3",
     "remark-preset-prettier": "^2.0.1",
-    "rollup": "^3.2.3",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.4",
+    "tslib": "^2.6.2",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
     "uvu": "^0.5.6"
   },
   "lint-staged": {
