--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "npm run dev",
     "prepack": "npm run build",
     "publish": "np --no-yarn",
-    "test": "uvu tests"
+    "test": "uvu -r tsm tests"
   },
   "files": [
     "bin/",
@@ -68,6 +68,7 @@
     "remark-preset-lint-recommended": "^6.1.3",
     "remark-preset-prettier": "^2.0.1",
     "tslib": "^2.6.2",
+    "tsm": "^2.3.0",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "uvu": "^0.5.6"
