add path filter

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -1,15 +1,30 @@
 name: CI
 
 on:
-- push
-- pull_request
+  push:
+    paths:
+    - '.github/**'
+    - 'src/**'
+    - 'tests/**'
+    - 'types/**'
+    - 'package.json'
+    - 'pnpm-lock.yaml'
+  pull_request:
+      paths:
+      - '.github/**'
+      - 'src/**'
+      - 'tests/**'
+      - 'types/**'
+      - 'package.json'
+      - 'pnpm-lock.yaml'
+  workflow_dispatch:
 
 jobs:
   default:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: ['14', 'lts/*', '*']
+        node-version: ['lts/*', '*']
         os: [ubuntu-latest]
 
     steps:
@@ -25,7 +40,7 @@ jobs:
         name: Install pnpm
         id: pnpm-install
         with:
-          version: 7
+          version: 8
           run_install: false
 
       - name: Get pnpm store directory
