--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "tsup",
     "dev": "npm run build -- --watch",
     "fix": "eslint --fix ./src",
-    "lint:json": "eslint ./*.json --ignore-path .gitignore",
+    "lint:code": "eslint **/*.json **/*.ts --ignore-path .gitignore",
+    "lint:deps": "knip --production",
     "lint:md": "remark . --quiet --frail --ignore-path .gitignore",
-    "lint:ts": "eslint ./src --ignore-path .gitignore",
     "lint": "npm-run-all --parallel lint:*",
     "start": "npm run dev",
     "prepack": "npm run build",
@@ -43,37 +43,45 @@
     "wp-cli"
   ],
   "dependencies": {
-    "commander": "^11.1.0",
+    "commander": "^12.1.0",
     "log-symbols": "^6.0.0",
-    "picocolors": "^1.0.0",
+    "picocolors": "^1.0.1",
     "sort-keys": "^5.0.0",
-    "table": "^6.8.1",
+    "table": "^6.8.2",
     "update-notifier": "^7.0.0",
     "wp-salts": "^4.0.0",
-    "yaml": "^2.3.4"
+    "yaml": "^2.4.2"
   },
   "devDependencies": {
-    "@types/node": "^18.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
+    "@types/node": "^18.19.33",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-jsonc": "^2.16.0",
+    "eslint-plugin-unicorn": "^53.0.0",
     "execa": "^8.0.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "np": "^9.2.0",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.1.1",
-    "remark-cli": "^12.0.0",
+    "husky": "^9.0.11",
+    "knip": "^5.17.3",
+    "lint-staged": "^15.2.5",
+    "np": "^10.0.5",
+    "npm-run-all2": "^6.2.0",
+    "prettier": "^3.2.5",
+    "remark-cli": "^12.0.1",
     "remark-preset-lint-recommended": "^6.1.3",
     "remark-preset-prettier": "^2.0.1",
     "tslib": "^2.6.2",
     "tsm": "^2.3.0",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5",
     "uvu": "^0.5.6"
   },
   "lint-staged": {
+    "*.json": "eslint --cache --fix",
+		"*.ts": [
+			"eslint --cache --fix",
+			"prettier --cache --write"
+		],
     "*.(json|ts)": "eslint --cache --fix",
     "*.md": "prettier --write"
   }
