chore: remove prepare script

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"lint:knip": "knip --cache --production",
 		"lint:publint": "publint",
 		"prepack": "npm run build",
-		"prepare": "lefthook install",
 		"publish:jsr": "deno publish",
 		"publish:npm": "np --any-branch",
 		"start": "npm run start",
@@ -68,6 +67,11 @@
 		"typescript": "^5.9.3",
 		"uvu": "^0.5.6",
 		"vitest": "^4.0.6"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"lefthook"
+		]
 	},
 	"packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
